doc: updated readme
